# CGI_C

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ReleaseNotes.md  cgi.h  compile.txt
download/linux/include/: cgi.h
include/: cgi.h  cgi_font.h  typedefs.h
run/linux/: bouncing_ball  test.out  testt
src/: linux.c  main.c  platform.c  typedefs.h  win32.c
src/common/: font_rasterizer.c
src/rasterizer/font/: ascii.h
test/: bouncing_ball.c  linux_test  linux_test.c  test  test.c  test.cpp  test.out  test2.c  test2.out  testcpp
